# miniTranslator

./: Dockerfile  Procfile  app.py  asound.conf  gunicorn_config.py  poetry.toml  pyproject.toml  render.yaml  requirements.txt
scripts/: prebuild.py
templates/: index.html  result.html
